# agent-box

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  init.sh  pyproject.toml  sample.env
.github/workflows/: ci.yml  docker.yml
configs/: openclaw.json.template
docs/: DESIGN.md
scripts/: entrypoint.sh  init.py
src/agent_box/: __init__.py  config.py  main.py  models.py  session_manager.py
src/agent_box/agents/: __init__.py  base.py  claude_code.py
src/agent_box/channels/: base.py  tui.py  weixin.py
src/agent_box/channels/weixin_sdk/: cli.py  client.py  login.py  store.py
src/agent_box/router/: base.py  router.py
tests/: conftest.py  test_agents.py  test_channels.py  test_main.py  test_models.py  test_projects.py  test_router.py
