[project]
name = "agent-box"
version = "0.1.2"
description = "IM → Router → Agent pipeline for managing coding projects via chat"
requires-python = ">=3.12"
dependencies = [
    "claude-code-sdk>=0.0.25",
    "anyio>=4.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "prompt-toolkit>=3.0.52",
    "textual>=3.0",
]

[project.scripts]
agent-box = "agent_box.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_box"]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-anyio>=0.0.0",
]

[tool.uv]
python-preference = "only-system"
environments = ["python_version >= '3.12'"]

[tool.pytest.ini_options]
testpaths = ["tests"]
